# Management-Science

./: .gitignore  .nojekyll  404 2.html  404 4.html  404 5.html  404.html  404.qmd  CLAUDE.md  LICENSE  README.md  _quarto.yml  index 2.html  index 3.html  index 4.html  index 5.html  index 6.html  index.html  index.qmd  klu_syllabus.md  main.py  pyproject.toml  robots 2.txt  search 2.json  search 4.json  search.json  sitemap 2.xml  sitemap 4.xml  sitemap.xml
_repo-md/: index 2.md  index.md
assignments/: assignment_00 2.ipynb  assignment_00 3.html  assignment_00 3.ipynb  assignment_00 4.ipynb  assignment_00 5.html  assignment_00 5.ipynb  assignment_00 7.html  assignment_00 7.ipynb  assignment_00 8.ipynb  assignment_00.html  assignment_00.ipynb  assignment_00.qmd  assignment_01 2.html  assignment_01 2.ipynb  assignment_01 3.html  assignment_01 3.ipynb  assignment_01 4.html  assignment_01 4.ipynb  assignment_01 6.html  assignment_01 6.ipynb  assignment_01 7.ipynb  assignment_01 8.html  assignment_01 8.ipynb  assignment_01 9.html  assignment_01 9.ipynb  assignment_01.html  assignment_01.ipynb  assignment_01.qmd  assignment_02 2.html  assignment_02 2.ipynb  assignment_02 3.ipynb  assignment_02 4.html  assignment_02 4.ipynb  assignment_02 5.html  assignment_02 5.ipynb  assignment_02 6.html  assignment_02 7.html  assignment_02 8.ipynb  assignment_02 9.ipynb  assignment_02.html  (+2 more)
assignments 4/: assignment_00 3.html  assignment_00 3.ipynb  assignment_01 3.ipynb
competitions/: competition_04_techventure.qmd
docs/: chatbot-system-prompt.md
general 4/: faq 3.html  (+3 more)
(+588 files in other folders)
