[project]
name = "management-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "jupytext>=1.18.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "statsmodels>=0.14.5",
]

[dependency-groups]
dev = [
    "imageio>=2.37.0",
    "ipykernel>=7.0.1",
]
